distillation column recipe system and refactor